[package]
name = "font-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
display-interface = "0.4.1"
eframe = "0.21.3"
embedded-graphics = "0.7.1"
embedded-layout = "0.2.0"
fontdue = "0.7.2"
minifb = "0.24.0"
